--- a/Untitled Notebook 2025-02-12 15:41:41.ipynb
+++ b/Untitled Notebook 2025-02-12 15:41:41.ipynb
@@ -18,10 +18,10 @@
    },
    "outputs": [],
    "source": [
-    "jdbc_url=\"jdbc:sqlserver://ramnewserver.database.windows.net:1433;database=ramsqldatabase\"\n",
+    "jdbc_url=\"jdbc:sqlserver://ramhariserver.database.windows.net:1433;database=ramdb\"\n",
     "connection_details={\n",
     "    \"user\":\"ram\",\n",
-    "    \"password\":\"12345678@s\",\n",
+    "    \"password\":\"Welcome123\",\n",
     "    \"driver\":\"com.microsoft.sqlserver.jdbc.SQLServerDriver\"\n",
     "}"
    ]
