--- a/Untitled Notebook 2025-02-12 15:41:41.ipynb
+++ b/Untitled Notebook 2025-02-12 15:41:41.ipynb
@@ -18,13 +18,70 @@
    },
    "outputs": [],
    "source": [
-    "jdbc_url=\"jdbc:sqlserver://ramhariserver.database.windows.net:1433;database=ramdb\"\n",
+    "jdbc_url=\"jdbc:sqlserver://ramnewserver.database.windows.net:1433;database=ramsqldatabase\"\n",
     "connection_details={\n",
     "    \"user\":\"ram\",\n",
-    "    \"password\":\"Welcome123\",\n",
+    "    \"password\":\"12345678@s\",\n",
     "    \"driver\":\"com.microsoft.sqlserver.jdbc.SQLServerDriver\"\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4cccf043-c40a-46ca-9ef1-08457e452fde",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "04444447-b9b2-4bd0-9c13-2759a744c961",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5fe498a5-d106-44a7-8576-54563ed38f7e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
